opa/practise/privileged-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context-demo
spec:
  containers:
  - name: sec-ctx-demo
    image: registry.k8s.io/e2e-test-images/agnhost:2.45
    command: [ "sh", "-c", "sleep 1h" ]
    securityContext:
#      allowPrivilegeEscalation: false                # Moved here
      privileged: true
      runAsNonRoot: true
