opa/practise/resource-limit.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: httpd
  name: httpd
spec:
  containers:
  - image: nginx
    name: httpd
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
