opa/practise/restrict-pod-security.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context-demo
spec:
  containers:
  - name: sec-ctx-demo
    #image: registry.k8s.io/e2e-test-images/agnhost:2.45
    image: nginx
    command: [ "sh", "-c", "sleep 1h" ]
    securityContext:
      allowPrivilegeEscalation: false                # Moved here
      privileged: false
      runAsNonRoot: false
      readOnlyRootFilesystem: true
