opa/practise/block-hostpath-cons-temp.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8shostpathblock
spec:
  crd:
    spec:
      names:
        kind: K8sHostPathBlock
      validation:
        # Schema for the `parameters` field
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8shostpathblock
      
        violation[{"msg": msg}] {
          volume:= input.review.object.spec.volumes[_]
          volume.hostPath
          msg:= "hostPath cannot use my pod: %v"
        }
