opa/practise/block-hostpath-cons.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHostPathBlock
metadata:
  name: pod-hostpath-block
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
