opa/practise/privileged-container-cons-2.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockPrivileged
metadata:
  name: privileged-containers
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    securityContextFields:
      - privileged
      - allowPrivilegeEscalation
