opa/practise/resource-limit-cons-temp.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sresourcelimit
spec:
  crd:
    spec:
      names:
        kind: k8sResourceLimit
      validation:
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sresourcelimit

        
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits
          msg := sprintf("Container must provide resource Limits in: %v", [container.name])
        }        
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.requests
          msg := sprintf("Container must provide resource Requests in: %v", [container.name])
        }
