opa/practise/restrict-pod-security-con-temp-0.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: restrictedpodsecurity
spec:
  crd:
    spec:
      names:
        kind: RestrictedPodSecurity
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package restrictedpodsecurity
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.runAsNonRoot
          msg := sprintf("Container %v must run as non-root", [container.name])
        }
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.readOnlyRootFilesystem
          msg := sprintf("Container %v must have readOnlyRootFilesystem", [container.name])
        }
